--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,6 @@
     box-sizing: border-box;
     position: relative;
 }
-
 .btn:hover::before {
     content: "";
     position: absolute;
@@ -31,9 +30,25 @@
     height: 100%;
     background: rgba(0,0,0,.07);
 }
-
 .btn.btn--primary {
     border: 1px solid #65b836;
     color: #fff;
     background: #55a532 linear-gradient(#91dd70, #55ae2e);
+}
+
+/* INPUT */
+.input--text {
+    height: 34px;
+    padding: 0 10px;
+    font-size: 16px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    outline: none;
+    box-shadow: inset 0 1px 2px rgba(0,0,0,.075);
+    font-size: 16px;
+}
+.input--text:focus {
+    border-color: #51a7e8;
+    box-shadow: inset 0 1px 2px rgba(0,0,0,.075), 0 0 5px rgba(81,167,232,0.5);
+    font-size: 16px;
 }
