06. 좌우 분할(Float), 요소 정렬(Flex)과 순서(Order) - 1

--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,18 @@ a {
 .input--text:-ms-input-placeholder      { color: #cacaca; }
 .input--text::-moz-placeholder          { color: #cacaca; }
 
+/* FLOAT CLEARFIX */
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: block;
+}
+.float--left {
+    float: left;
+}
+.float--right {
+    float: right;
+}
 
 /* HEADER */
 header {
@@ -103,4 +115,9 @@ header .main-menu li a {
 }
 header .main-menu li a:hover {
     color: #4078c5;
+}
+
+/* Sign group(Right) */
+header .sign-group {
+    display: flex;
 }
