--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,17 @@ a {
     float: right;
 }
 
+/* SUMMARY */
+.summary {
+
+}
+.summary__title {
+
+}
+.summary__description {
+    
+}
+
 /* HEADER */
 header {
     border-bottom: 1px solid rgba(0,0,0,.75);
