--- a/css/main.css
+++ b/css/main.css
@@ -81,10 +81,27 @@ a {
 
 }
 .summary__title {
-
+    font-size: 38px;
+    font-weight: 300;
+    line-height: 1.25;
+    margin-bottom: 18px;
 }
 .summary__description {
-    
+    font-size: 26px;
+    font-weight: 300;
+    color: #767676;
+    line-height: 1.5;
+}
+
+/* SECTION & INNER */
+.section {
+    position: relative;
+}
+.section .inner {
+    max-width: 980px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    position: relative;
 }
 
 /* HEADER */
@@ -164,4 +181,14 @@ header .sub-menu li a {
 }
 header .sub-menu li a:hover {
     color: #4078c0;
+}
+
+/* VISUAL */
+.section--visual {
+    background: url("../img/bg.jpg");
+    background-repeat: no-repeat;
+    background-position: bottom left;
+}
+.section--visual .inner {
+    padding: 160px 0;
 }
