--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ a {
     padding: 0 12px;
     font-size: 14px;
     font-weight: 500;
+    color: #333;
     line-height: 1.5;
     cursor: pointer;
     box-sizing: border-box;
@@ -202,6 +203,12 @@ header .sub-menu li a:hover {
 }
 .section--visual .inner {
     padding: 160px 0;
+    display: flex;
+}
+.section--visual .summary {
+    flex-grow: 1;
+    flex-basis: 0;
+    margin-right: 90px;
 }
 .section--visual .summary__title {
     color: #fff;
