02. 반응형 - Medium Device - 토글 버튼 - 2

--- a/css/main.css
+++ b/css/main.css
@@ -402,4 +402,20 @@ footer .logo:hover svg {
     header .sign-group {
         float: none;
     }
+    header .logo {
+        padding: 12px 0;
+    }
+    header .toggle {
+        display: none;
+    }
+    #toggle-btn {
+        background: url(../img/toggle-btn.svg);
+        width: 18px;
+        height: 24px;
+        position: absolute;
+        top: 16px;
+        right: 20px;
+        cursor: pointer;
+        text-indent: -9999px;
+    }
 }
