--- a/css/main.css
+++ b/css/main.css
@@ -183,6 +183,17 @@ header .sub-menu li a {
 header .sub-menu li a:hover {
     color: #4078c0;
 }
+#toggle-btn {
+    display: none;
+    background: url(../img/toggle-btn.svg);
+    width: 18px;
+    height: 24px;
+    position: absolute;
+    top: 16px;
+    right: 20px;
+    cursor: pointer;
+    text-indent: -9999px;
+}
 
 /* VISUAL */
 .section--visual {
@@ -449,13 +460,6 @@ footer .logo:hover svg {
         display: block;
     }
     #toggle-btn {
-        background: url(../img/toggle-btn.svg);
-        width: 18px;
-        height: 24px;
-        position: absolute;
-        top: 16px;
-        right: 20px;
-        cursor: pointer;
-        text-indent: -9999px;
+        display: block;
     }
 }
